Arrivato al jumbotron

--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    ciao
+    <div class="container-fluid">
+      <header>
+        <div class="row">
+          <div class="col-lg-3">
+            ciao
+          </div>
+          <div class="col-lg-2 col-lg-offset-5">
+            ciao
+          </div>
+          <div class="col-lg-1">
+            ciao
+          </div>
+          <div class="col-lg-1">
+            ciao
+          </div>
+        </div>
+      </header>
+      <div class="jumbotron">
+        <div class="row">
+          <div class="col-lg-12">
+            <img src="" alt="">
+          </div>
+          <div class="col-lg-12">
+            <h2>Start Bootstrap</h2>
+          </div>
+          <div class="col-lg-12">
+            <span>Graphich design</span>
+            <span>Graphich design</span>
+            <span>Graphich design</span>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
