Sistemato prima sezione, portfolio

--- a/index.html
+++ b/index.html
@@ -37,8 +37,61 @@
             <span>Graphich design</span>
             <span>Graphich design</span>
           </div>
-
         </div>
+      </div>
+      <div class="main">
+        <!-- zona portfoglio -->
+        <section>
+          <div class="row">
+            <div class="col-lg-12">
+              <h2>Portfolio</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-lg-offset-4">
+              barretta separatrice
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-lg-4">
+                <img src="" alt="">prova
+              </div>
+              <div class="col-lg-4">
+                <img src="" alt="">prova
+              </div>
+              <div class="col-lg-4">
+                <img src="" alt="">prova
+              </div>
+
+            </div>
+          <div class="row">
+              <div class="col-lg-4">
+                <img src="" alt="">prova
+              </div>
+              <div class="col-lg-4">
+                <img src="" alt="">prova
+              </div>
+              <div class="col-lg-4">
+                <img src="" alt="">prova
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- about -->
+        <section>
+          <div class="row">
+            <div class="col-lg-12">
+              <h2>about</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-lg-offset-4">
+              barretta separatrice
+            </div>
+          </div>
+
+        </section>
+
       </div>
     </div>
   </body>
