--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
       </div>
-      <div class="main">
+      <main>
         <!-- zona portfoglio -->
         <section>
           <div class="row">
@@ -62,7 +62,6 @@
               <div class="col-lg-4">
                 <img src="" alt="">prova
               </div>
-
             </div>
           <div class="row">
               <div class="col-lg-4">
@@ -74,7 +73,6 @@
               <div class="col-lg-4">
                 <img src="" alt="">prova
               </div>
-            </div>
           </div>
         </section>
         <!-- about -->
@@ -89,10 +87,74 @@
               barretta separatrice
             </div>
           </div>
+          <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+              <div class="col-lg-6">
+                ciao
+              </div>
+              <div class="col-lg-6">
+                ciao
+              </div>
+            </div>
 
+          </div>
+          <div class="row">
+            bottone
+          </div>
         </section>
+        <!-- contact me -->
+        <section>
+          <div class="row">
+            <div class="col-lg-12">
+              <h2>contact me</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+              nome
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+              email addres
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+              phone number
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+              message
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+              send
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <div class="row">
+          <div class="col-lg-4">
+            prova
+          </div>
+          <div class="col-lg-4">
+            prova
+          </div>
+          <div class="col-lg-4">
+            prova
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              copyright
+            </div>
+          </div>
+        </div>
+      </footer>
 
-      </div>
     </div>
   </body>
 </html>
