--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
     <div class="container-fluid">
       <header>
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-xs-3">
             ciao
           </div>
-          <div class="col-lg-2 col-lg-offset-5">
+          <div class="col-xs-2 col-xs-offset-5">
             ciao
           </div>
-          <div class="col-lg-1">
+          <div class="col-xs-1">
             ciao
           </div>
-          <div class="col-lg-1">
+          <div class="col-xs-1">
             ciao
           </div>
         </div>
       </header>
       <div class="jumbotron">
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-xs-12">
             <img src="" alt="">
           </div>
-          <div class="col-lg-12">
+          <div class="col-xs-12">
             <h2>Start Bootstrap</h2>
           </div>
-          <div class="col-lg-12">
+          <div class="col-xs-12">
             <span>Graphich design</span>
             <span>Graphich design</span>
             <span>Graphich design</span>
@@ -43,34 +43,34 @@
         <!-- zona portfoglio -->
         <section>
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-xs-12">
               <h2>Portfolio</h2>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-4 col-lg-offset-4">
+            <div class="col-xs-4 col-lg-xs-4">
               barretta separatrice
             </div>
           </div>
           <div class="row">
-              <div class="col-lg-4">
+              <div class="col-xs-12  col-md-6 col-lg-4">
                 <img src="" alt="">prova
               </div>
-              <div class="col-lg-4">
+              <div class="col-xs-12 col-md-6 col-lg-4">
                 <img src="" alt="">prova
               </div>
-              <div class="col-lg-4">
+              <div class="col-xs-12  col-md-6 col-lg-4">
                 <img src="" alt="">prova
               </div>
             </div>
           <div class="row">
-              <div class="col-lg-4">
+              <div class="col-xs-12  col-md-6 col-lg-4">
                 <img src="" alt="">prova
               </div>
-              <div class="col-lg-4">
+              <div class="col-xs-12  col-md-6 col-lg-4">
                 <img src="" alt="">prova
               </div>
-              <div class="col-lg-4">
+              <div class="col-xs-12  col-md-6 col-lg-4">
                 <img src="" alt="">prova
               </div>
           </div>
@@ -78,28 +78,30 @@
         <!-- about -->
         <section>
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-xs-12">
               <h2>about</h2>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-4 col-lg-offset-4">
+            <div class="col-xs-4 col-xs-offset-4">
               barretta separatrice
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-              <div class="col-lg-6">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <div class="col-xs-12 col-md-6">
                 ciao
               </div>
-              <div class="col-lg-6">
+              <div class="col-xs-12 col-md-6">
                 ciao
               </div>
             </div>
-
           </div>
           <div class="row">
-            bottone
+            <div class="col-xs-12">
+
+              bottone
+            </div>
           </div>
         </section>
         <!-- contact me -->
@@ -110,27 +112,27 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
+            <div class="col-xs-10 col-xs-offset-1">
               nome
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
+            <div class="col-xs-10 col-xs-offset-1">
               email addres
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
+            <div class="col-xs-10 col-xs-offset-1">
               phone number
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
+            <div class="col-xs-10 col-xs-offset-1">
               message
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
+            <div class="col-xs-10 col-xs-offset-1">
               send
             </div>
           </div>
@@ -138,13 +140,13 @@
       </main>
       <footer>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-xs-12 col-md-4">
             prova
           </div>
-          <div class="col-lg-4">
+          <div class="col-xs-12 col-md-4">
             prova
           </div>
-          <div class="col-lg-4">
+          <div class="col-xs-12 col-md-4">
             prova
           </div>
           <div class="row">
