--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-4 col-lg-xs-4">
+            <div class="col-xs-12">
               barretta separatrice
             </div>
           </div>
@@ -62,8 +62,6 @@
               <div class="col-xs-12  col-md-6 col-lg-4">
                 <img src="" alt="">prova
               </div>
-            </div>
-          <div class="row">
               <div class="col-xs-12  col-md-6 col-lg-4">
                 <img src="" alt="">prova
               </div>
@@ -99,7 +97,6 @@
           </div>
           <div class="row">
             <div class="col-xs-12">
-
               bottone
             </div>
           </div>
@@ -149,13 +146,16 @@
           <div class="col-xs-12 col-md-4">
             prova
           </div>
-          <div class="row">
-            <div class="col-xs-12">
-              copyright
-            </div>
+      </footer>
+      <div class="last-footer">
+
+        <div class="row">
+          <div class="col-xs-12">
+            copyright
           </div>
         </div>
-      </footer>
+      </div>
+      </div>
 
     </div>
   </body>
