--- a/index.html
+++ b/index.html
@@ -3,39 +3,67 @@
   <head>
     <meta charset="utf-8">
     <title>StartBootstrap</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-massimo">
       <header>
-        <div class="row">
-          <div class="col-xs-3">
-            ciao
+        <nav class="navbar navbar-fixed-top">
+          <div class="container">
+            <div class="row">
+              <div id="slogan" class="col-xs-3">
+                <a href="#">StartBootstrap</a>
+              </div>
+              <div id="navbarresponsive" class="d-none-md">
+                <div class="col-xs-2 col-xs-offset-3 t-a-right">
+                  <a href="">Portafoglio
+                  </a>
+                </div>
+                <div class="col-xs-2 t-a-right">
+                  <a href="">about
+                  </a>
+                </div>
+                <div class="col-xs-2 t-a-right">
+                  <a href="">contact
+                  </a>
+                </div>
+              </div>
+                <div class="dropdown d-none-lg col-xs-2 col-xs-offset-6 ">
+                  <button class="btn dropdown-toggle text-uppercase" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">menu
+                    <span class="glyphicon glyphicon-align-justify text-uppercase" aria-hidden="true"></span>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                      <li><a href="#">Portafoglio</a></li>
+                      <li><a href="#">About</a></li>
+                      <li><a href="#">Contact</a></li>
+                    </ul>
+                  </button>
+              </div>
+
+            </div>
           </div>
-          <div class="col-xs-2 col-xs-offset-5">
-            ciao
-          </div>
-          <div class="col-xs-1">
-            ciao
-          </div>
-          <div class="col-xs-1">
-            ciao
-          </div>
-        </div>
+        </nav>
       </header>
       <div class="jumbotron">
         <div class="row">
           <div class="col-xs-12">
-            <img src="" alt="">
+            <img src="img/avataaars.svg" alt="" class="img-responsive center-block img-size">
           </div>
           <div class="col-xs-12">
             <h2>Start Bootstrap</h2>
           </div>
           <div class="col-xs-12">
-            <span>Graphich design</span>
-            <span>Graphich design</span>
-            <span>Graphich design</span>
+            <div class="barra-spaziatrice">
+              <div class="divider-custom-line v-align"></div>
+              <span class="glyphicon glyphicon-star v-align" aria-hidden="true"></span>
+              <div class="divider-custom-line v-align"></div>
+            </div>
+          </div>
+
+          <div class="col-xs-12">
+            <span>Graphich design - Web designer - illustrator</span>
           </div>
         </div>
       </div>
@@ -48,28 +76,30 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">
-              barretta separatrice
+            <div class="barra-spaziatrice">
+              <div class="divider-custom-line v-align"></div>
+              <span class="glyphicon glyphicon-star v-align" aria-hidden="true"></span>
+              <div class="divider-custom-line v-align"></div>
             </div>
           </div>
           <div class="row">
-              <div class="col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="">prova
+              <div class="card fucsia col-xs-12  col-md-6 col-lg-4">
+                <img src="" alt="casetta" class="img-rounded">
               </div>
-              <div class="col-xs-12 col-md-6 col-lg-4">
-                <img src="" alt="">prova
+              <div class="card azzure col-xs-12 col-md-6 col-lg-4">
+                <img src="" alt="torta" class="img-rounded">
               </div>
-              <div class="col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="">prova
+              <div class="card black col-xs-12  col-md-6 col-lg-4">
+                <img src="" alt="circus" class="img-rounded">
               </div>
-              <div class="col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="">prova
+              <div class="card blue col-xs-12  col-md-6 col-lg-4">
+                <img src="" alt="gamepad" class="img-rounded">
               </div>
-              <div class="col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="">prova
+              <div class="card dark-blue col-xs-12  col-md-6 col-lg-4">
+                <img src="" alt="cassaforte" class="img-rounded">
               </div>
-              <div class="col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="">prova
+              <div class="card brown col-xs-12  col-md-6 col-lg-4">
+                <img src="" alt="submarine" class="img-rounded">
               </div>
           </div>
         </section>
@@ -81,17 +111,19 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-4 col-xs-offset-4">
-              barretta separatrice
+            <div class="barra-spaziatrice">
+              <div class="divider-custom-line v-align"></div>
+              <span class="glyphicon glyphicon-star v-align" aria-hidden="true"></span>
+              <div class="divider-custom-line v-align"></div>
             </div>
           </div>
           <div class="row">
             <div class="col-xs-12 col-md-10 col-md-offset-1">
-              <div class="col-xs-12 col-md-6">
-                ciao
+              <div class="col-xs-12 col-md-6 text-left">
+                Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
               </div>
-              <div class="col-xs-12 col-md-6">
-                ciao
+              <div class="col-xs-12 col-md-6 text-left">
+                Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point
               </div>
             </div>
           </div>
