Sempre header e jumbotron

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <nav class="navbar navbar-fixed-top">
           <div class="container">
             <div class="row">
-              <div id="slogan" class="col-xs-3">
+              <div id="slogan" class="col-xs-3 text-left">
                 <a href="#">StartBootstrap</a>
               </div>
               <div id="navbarresponsive" class="d-none-md">
-                <div class="col-xs-2 col-xs-offset-3 t-a-right">
+                <div class="col-xs-2 col-xs-offset-3 text-right">
                   <a href="">Portafoglio
                   </a>
                 </div>
-                <div class="col-xs-2 t-a-right">
+                <div class="col-xs-2 text-right">
                   <a href="">about
                   </a>
                 </div>
-                <div class="col-xs-2 t-a-right">
+                <div class="col-xs-2 text-right">
                   <a href="">contact
                   </a>
                 </div>
@@ -40,12 +40,12 @@
                       <li><a href="#">Contact</a></li>
                     </ul>
                   </button>
-              </div>
-
+                </div>
             </div>
           </div>
         </nav>
       </header>
+
       <div class="jumbotron">
         <div class="row">
           <div class="col-xs-12">
