Aggiunto le immaggini e arrivato alla sezione About

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   </a>
                 </div>
               </div>
-                <div class="dropdown d-none-lg col-xs-2 col-xs-offset-6 ">
+                <div class="dropdown d-none-lg col-xs-2 col-xs-offset-7 ">
                   <button class="btn dropdown-toggle text-uppercase" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">menu
                     <span class="glyphicon glyphicon-align-justify text-uppercase" aria-hidden="true"></span>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -84,22 +84,22 @@
           </div>
           <div class="row">
               <div class="card fucsia col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="casetta" class="img-rounded">
+                <img src="img/cabin.png" alt="casetta" class="img-rounded">
               </div>
               <div class="card azzure col-xs-12 col-md-6 col-lg-4">
-                <img src="" alt="torta" class="img-rounded">
+                <img src="img/cake.png" alt="torta" class="img-rounded">
               </div>
               <div class="card black col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="circus" class="img-rounded">
+                <img src="img/circus.png" alt="circus" class="img-rounded">
               </div>
               <div class="card blue col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="gamepad" class="img-rounded">
+                <img src="img/game.png" alt="gamepad" class="img-rounded">
               </div>
               <div class="card dark-blue col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="cassaforte" class="img-rounded">
+                <img src="img/safe.png" alt="cassaforte" class="img-rounded">
               </div>
               <div class="card brown col-xs-12  col-md-6 col-lg-4">
-                <img src="" alt="submarine" class="img-rounded">
+                <img src="img/submarine.png" alt="submarine" class="img-rounded">
               </div>
           </div>
         </section>
@@ -119,10 +119,10 @@
           </div>
           <div class="row">
             <div class="col-xs-12 col-md-10 col-md-offset-1">
-              <div class="col-xs-12 col-md-6 text-left">
+              <div class="col-xs-8 col-xs-offset-2 col-md-5 col-md-offset-1 text-left m-top">
                 Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
               </div>
-              <div class="col-xs-12 col-md-6 text-left">
+              <div class="col-xs-8 col-xs-offset-2 col-md-5  text-left  m-top">
                 Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point
               </div>
             </div>
