Finita sezione carte

--- a/index.html
+++ b/index.html
@@ -47,61 +47,53 @@
       </header>
 
       <div class="jumbotron">
-        <div class="row">
-          <div class="col-xs-12">
-            <img src="img/avataaars.svg" alt="" class="img-responsive center-block img-size">
-          </div>
-          <div class="col-xs-12">
-            <h2>Start Bootstrap</h2>
-          </div>
-          <div class="col-xs-12">
-            <div class="barra-spaziatrice">
-              <div class="divider-custom-line v-align"></div>
-              <span class="glyphicon glyphicon-star v-align" aria-hidden="true"></span>
-              <div class="divider-custom-line v-align"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <img src="img/avataaars.svg" alt="" class="img-responsive center-block img-size">
             </div>
-          </div>
-
-          <div class="col-xs-12">
-            <span>Graphich design - Web designer - illustrator</span>
+            <div class="col-xs-12">
+              <h2>Start Bootstrap</h2>
+            </div>
+            <div class="col-xs-12">
+              <div class="barra-spaziatrice">
+                <div class="divider-custom-line v-align"></div>
+                <span class="glyphicon glyphicon-star v-align" aria-hidden="true"></span>
+                <div class="divider-custom-line v-align"></div>
+              </div>
+            </div>
+            <div class="col-xs-12">
+              <span>Graphich design - Web designer - illustrator</span>
+            </div>
           </div>
         </div>
       </div>
       <main>
         <!-- zona portfoglio -->
         <section>
-          <div class="row">
-            <div class="col-xs-12">
-              <h2>Portfolio</h2>
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h2>Portfolio</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="barra-spaziatrice">
+                <div class="divider-custom-line v-align"></div>
+                <span class="glyphicon glyphicon-star v-align" aria-hidden="true"></span>
+                <div class="divider-custom-line v-align"></div>
+              </div>
+            </div>
+            <div class="row">
+                <img src="img/cabin.png" alt="casetta" class="card col-xs-12 col-md-6 col-lg-4">
+                <img src="img/cake.png" alt="torta" class="card col-xs-12 col-md-6 col-lg-4">
+                <img src="img/circus.png" alt="circus" class="card col-xs-12  col-md-6 col-lg-4">
+                <img src="img/game.png" alt="gamepad" class="card  col-xs-12  col-md-6 col-lg-4">
+                <img src="img/safe.png" alt="cassaforte" class="card  col-xs-12  col-md-6 col-lg-4">
+                <img src="img/submarine.png" alt="submarine" class="card  col-xs-12  col-md-6 col-lg-4">
             </div>
           </div>
-          <div class="row">
-            <div class="barra-spaziatrice">
-              <div class="divider-custom-line v-align"></div>
-              <span class="glyphicon glyphicon-star v-align" aria-hidden="true"></span>
-              <div class="divider-custom-line v-align"></div>
-            </div>
-          </div>
-          <div class="row">
-              <div class="card fucsia col-xs-12  col-md-6 col-lg-4">
-                <img src="img/cabin.png" alt="casetta" class="img-rounded">
-              </div>
-              <div class="card azzure col-xs-12 col-md-6 col-lg-4">
-                <img src="img/cake.png" alt="torta" class="img-rounded">
-              </div>
-              <div class="card black col-xs-12  col-md-6 col-lg-4">
-                <img src="img/circus.png" alt="circus" class="img-rounded">
-              </div>
-              <div class="card blue col-xs-12  col-md-6 col-lg-4">
-                <img src="img/game.png" alt="gamepad" class="img-rounded">
-              </div>
-              <div class="card dark-blue col-xs-12  col-md-6 col-lg-4">
-                <img src="img/safe.png" alt="cassaforte" class="img-rounded">
-              </div>
-              <div class="card brown col-xs-12  col-md-6 col-lg-4">
-                <img src="img/submarine.png" alt="submarine" class="img-rounded">
-              </div>
-          </div>
+
         </section>
         <!-- about -->
         <section>
