--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav class="navbar navbar-fixed-top">
           <div class="container">
             <div class="row">
-              <div id="slogan" class="col-xs-3 text-left">
-                <a href="#">StartBootstrap</a>
+              <div class="col-xs-7 text-left">
+                <a href="#"> <h1>Start Bootstrap</h1></a>
               </div>
               <div id="navbarresponsive" class="d-none-md">
-                <div class="col-xs-2 col-xs-offset-3 text-right">
+                <div class="col-xs-2  text-right">
                   <a href="">Portafoglio
                   </a>
                 </div>
@@ -26,12 +26,12 @@
                   <a href="">about
                   </a>
                 </div>
-                <div class="col-xs-2 text-right">
+                <div class="col-xs-1 text-right">
                   <a href="">contact
                   </a>
                 </div>
               </div>
-                <div class="dropdown d-none-lg col-xs-2 col-xs-offset-7 ">
+                <div class="dropdown d-none-lg col-xs-2 col-xs-offset-3 ">
                   <button class="btn dropdown-toggle text-uppercase" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">menu
                     <span class="glyphicon glyphicon-align-justify text-uppercase" aria-hidden="true"></span>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -45,7 +45,6 @@
           </div>
         </nav>
       </header>
-
       <div class="jumbotron">
         <div class="container">
           <div class="row">
@@ -85,45 +84,95 @@
               </div>
             </div>
             <div class="row">
-                <img src="img/cabin.png" alt="casetta" class="card col-xs-12 col-md-6 col-lg-4">
-                <img src="img/cake.png" alt="torta" class="card col-xs-12 col-md-6 col-lg-4">
-                <img src="img/circus.png" alt="circus" class="card col-xs-12  col-md-6 col-lg-4">
-                <img src="img/game.png" alt="gamepad" class="card  col-xs-12  col-md-6 col-lg-4">
-                <img src="img/safe.png" alt="cassaforte" class="card  col-xs-12  col-md-6 col-lg-4">
-                <img src="img/submarine.png" alt="submarine" class="card  col-xs-12  col-md-6 col-lg-4">
+              <div class="card col-xs-12 col-md-6 col-lg-4">
+                <a href="#" class="hover-plus">
+                  <div class="img-overlay ">
+                    +
+                  </div>
+                  <img src="img/cabin.png" alt="casetta" class="prova">
+                </a>
+              </div>
+              <div class="card col-xs-12 col-md-6 col-lg-4">
+                <a href="#" class="hover-plus">
+                <div class="img-overlay ">
+                  +
+                </div>
+                <img src="img/cake.png" alt="torta" class="prova">
+                </a>
+              </div>
+              <div class="card col-xs-12 col-md-6 col-lg-4">
+                <a href="#" class="hover-plus">
+                  <div class="img-overlay ">
+                    +
+                  </div>
+
+                  <img src="img/circus.png" alt="circus" class="prova">
+                </a>
+              </div>
+              <div class="card col-xs-12 col-md-6 col-lg-4">
+                <a href="#" class="hover-plus">
+                  <div class="img-overlay ">
+                    +
+                  </div>
+
+                  <img src="img/game.png" alt="gamepad" class="prova">
+                </a>
+              </div>
+              <div class="card col-xs-12 col-md-6 col-lg-4">
+                <a href="#" class="hover-plus">
+                  <div class="img-overlay ">
+                    +
+                  </div>
+
+                  <img src="img/safe.png" alt="cassaforte" class="prova">
+                </a>
+              </div>
+              <div class="card col-xs-12 col-md-6 col-lg-4">
+                <a href="#" class="hover-plus">
+                  <div class="img-overlay ">
+                    +
+                  </div>
+
+                  <img src="img/submarine.png" alt="submarine" class="prova">
+                </a>
+              </div>
+
             </div>
           </div>
 
         </section>
         <!-- about -->
         <section>
-          <div class="row">
-            <div class="col-xs-12">
-              <h2>about</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="barra-spaziatrice">
-              <div class="divider-custom-line v-align"></div>
-              <span class="glyphicon glyphicon-star v-align" aria-hidden="true"></span>
-              <div class="divider-custom-line v-align"></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-md-10 col-md-offset-1">
-              <div class="col-xs-8 col-xs-offset-2 col-md-5 col-md-offset-1 text-left m-top">
-                Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
-              </div>
-              <div class="col-xs-8 col-xs-offset-2 col-md-5  text-left  m-top">
-                Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h2>about</h2>
               </div>
             </div>
-          </div>
-          <div class="row">
+            <div class="row">
+              <div class="barra-spaziatrice">
+                <div class="divider-custom-line v-align"></div>
+                <span class="glyphicon glyphicon-star v-align" aria-hidden="true"></span>
+                <div class="divider-custom-line v-align"></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 col-md-10 col-md-offset-1">
+                <div class="col-xs-8 col-xs-offset-2 col-md-5 col-md-offset-1 text-left m-top">
+                  Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
+                </div>
+                <div class="col-xs-8 col-xs-offset-2 col-md-5 col-md-offset-0 text-left  m-top">
+                  Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point
+                </div>
+              </div>
+            </div>
+            <div class="row">
             <div class="col-xs-12">
               bottone
             </div>
           </div>
+          </div>
+
         </section>
         <!-- contact me -->
         <section>
