Sezione about finita

--- a/index.html
+++ b/index.html
@@ -136,10 +136,8 @@
                   <img src="img/submarine.png" alt="submarine" class="prova">
                 </a>
               </div>
-
             </div>
           </div>
-
         </section>
         <!-- about -->
         <section>
@@ -168,7 +166,13 @@
             </div>
             <div class="row">
             <div class="col-xs-12">
-              bottone
+              <div class="btn-group btn-group-lg m-top m-down" role="group" >
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+                  Free download
+                </button>
+              </div>
+
             </div>
           </div>
           </div>
