Finito sezione contatti

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#"> <h1>Start Bootstrap</h1></a>
               </div>
               <div id="navbarresponsive" class="d-none-md">
-                <div class="col-xs-2  text-right">
+                <div class="col-xs-1 col-xs-offset-1 text-right">
                   <a href="">Portafoglio
                   </a>
                 </div>
@@ -61,7 +61,7 @@
                 <div class="divider-custom-line v-align"></div>
               </div>
             </div>
-            <div class="col-xs-12">
+            <div class="col-xs-12 font-size-grow">
               <span>Graphich design - Web designer - illustrator</span>
             </div>
           </div>
@@ -156,10 +156,10 @@
             </div>
             <div class="row">
               <div class="col-xs-12 col-md-10 col-md-offset-1">
-                <div class="col-xs-8 col-xs-offset-2 col-md-5 col-md-offset-1 text-left m-top">
+                <div class="col-xs-8 col-xs-offset-2 col-md-5 col-md-offset-1 text-left m-top font-size-grow">
                   Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
                 </div>
-                <div class="col-xs-8 col-xs-offset-2 col-md-5 col-md-offset-0 text-left  m-top">
+                <div class="col-xs-8 col-xs-offset-2 col-md-5 col-md-offset-0 text-left  m-top font-size-grow">
                   Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point
                 </div>
               </div>
@@ -180,35 +180,27 @@
         </section>
         <!-- contact me -->
         <section>
-          <div class="row">
-            <div class="col-lg-12">
-              <h2>contact me</h2>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <h2>contact me</h2>
+              </div>
             </div>
+            <form>
+              <div class="form-group ">
+                <input type="name" class="form-control remove-border "  placeholder="Name">
+              </div>
+              <div class="form-group ">
+                <input type="Email Address" class="form-control remove-border "  placeholder="Email Address">
+              </div>
+              <div class="form-group ">
+                <input type="Phone Number" class="form-control remove-border "  placeholder="Phone Number">
+              </div>
+              <textarea class="form-control remove-border" rows="3" placeholder="Message"></textarea>
+              <button type="submit" class="btn m-top m-down b-g-c-g btn-default pull-left">Send</button>
+            </form>
+
           </div>
-          <div class="row">
-            <div class="col-xs-10 col-xs-offset-1">
-              nome
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-10 col-xs-offset-1">
-              email addres
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-10 col-xs-offset-1">
-              phone number
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-10 col-xs-offset-1">
-              message
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-10 col-xs-offset-1">
-              send
-            </div>
           </div>
         </section>
       </main>
