--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" >
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -197,30 +198,50 @@
                 <input type="Phone Number" class="form-control remove-border "  placeholder="Phone Number">
               </div>
               <textarea class="form-control remove-border" rows="3" placeholder="Message"></textarea>
-              <button type="submit" class="btn m-top m-down b-g-c-g btn-default pull-left">Send</button> 
+              <button type="submit" class="btn m-top m-down b-g-c-g btn-default pull-left">Send</button>
             </form>
 
           </div>
           </div>
         </section>
       </main>
-      <footer>
-        <div class="row">
-          <div class="col-xs-12 col-md-4">
-            prova
-          </div>
-          <div class="col-xs-12 col-md-4">
-            prova
-          </div>
-          <div class="col-xs-12 col-md-4">
-            prova
-          </div>
+      <footer class="text-center m-top padding-top-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4">
+              <h4 class="text-uppercase">Location</h4>
+              <span>2215 John Daniel Drive Clark, MO 65243</span>
+            </div>
+            <div class="col-xs-12 col-md-4">
+              <h4 class="text-uppercase">Arount the web</h4>
+              <span>
+                  <a href="#" class="around">
+                  <i class="fab fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="around">
+                  <i class="fab fa-twitter"></i>
+                  </a>
+                  <a href="#" class="around">
+                  <i class="fab fa-linkedin-in"></i>
+                  </a>
+                  <a href="#" class="around">
+                  <i class="fas fa-basketball-ball"></i>
+                  </a>
+              </span>
+            </div>
+            <div class="col-xs-12 col-md-4">
+              <h4 class="text-uppercase">about freelancer</h4>
+              <span>Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="#" class="footer-last-call">Start Bootstrap</a> .
+              </span>
+
+            </div>
+        </div>
       </footer>
-      <div class="last-footer">
+      <div class="last-footer padding-top-bottom">
 
         <div class="row">
           <div class="col-xs-12">
-            copyright
+              <h6>Copyright © Your Website 2020</h6>
           </div>
         </div>
       </div>
